# linecalc

./: .gitignore  LICENSE  README.md  linecalc.py  pyproject.toml  test_library.py
.github/workflows/: release.yml
src/linecalc/: __init__.py  linecalc.py
tests/: __init__.py  conftest.py  data.py  shared.py  test_cli.py  test_library.py
