[project]
name = "linecalc"
version = "0.1.2a1"
description = "Line calculator with currency conversions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "pytest>=9.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
"l" = "linecalc:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
