[project]
name = "linecalc"
version = "0.1.2"
description = "Line calculator with currency conversions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.2",
]

[project.scripts]
"linecalc" = "linecalc:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
